syntax="proto3";

import "../share/user.proto";
package topic;

enum Tab {
  share = 1;
  ask = 2;
  good = 3;
  job = 4;
}

message Topic {
  string id = 1;
  string author_id = 2;
  Tab tab = 3;
  string title = 4;
  string content = 5;
  UserBase author = 6;
  bool good = 7;
  bool top = 8;
  int32 reply_count = 9;
  int32 visit_count = 10;
  string create_at = 11;
  string last_reply_at = 12;
}
